added promo and section top

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -1,5 +1,20 @@
+<!--= include promo.html -->
 <!--= include header.html -->
 <main class="main">
-
+  <section class="top" style="background-image: image-set(url('../images/top-bg.avif') type('image/avif'),
+      url('../images/top-bg.webp') type('image/webp'),
+      url('../images/top-bg.jpg'));
+  min-height: 90vh;
+  background-repeat: no-repeat;
+  background-size: cover;">
+    <div class="container">
+      <div class="top__inner">
+        <h1 class="top__title">
+          Spring 2024 collection
+        </h1>
+        <a class="top__link" href="#">SHOP NEW ARRIVALS</a>
+      </div>
+    </div>
+  </section>
 </main>
 <!--= include footer.html -->
