added section our-advantages

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -59,6 +59,7 @@
   </section>
   <!--= include join-us.html -->
   <section class="designer">
+    <img class="designer__img-decor" src="images/designer-decor.svg" alt="">
     <div class="container">
       <div class="designer__inner">
         <div class="designer__content">
@@ -101,6 +102,43 @@
             "Here at our bridal salon, we weave dreams into reality, one stitch at a time."
           </p>
           <a class="designer__link" href="#">Show more</a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="our-advantages">
+    <div class="container">
+      <div class="our-advantages__wrapper">
+        <picture>
+          <source srcset="images/our-advantages-img.avif" type="image/avif">
+          <source srcset="images/our-advantages-img.Webp" type="image/Webp">
+          <img class="our-advantages__img" src="images/our-advantages-img.jpg" alt="Alt text">
+        </picture>
+        <img class="our-advantages__img-decor" src="images/our-advantages-decor.svg" alt="#">
+        <div class="our-advantages__inner">
+          <h2 class="our-advantages__title">
+            OUR ADVANTAGES
+          </h2>
+          <ul class="our-advantages__list">
+            <li class="our-advantages__item">
+              The latest collections
+            </li>
+            <li class="our-advantages__item">
+              15 years of experience
+            </li>
+            <li class="our-advantages__item">
+              Quality guarantee
+            </li>
+            <li class="our-advantages__item">
+              International brands
+            </li>
+            <li class="our-advantages__item">
+              Individual tailoring
+            </li>
+            <li class="our-advantages__item">
+              Free shipping
+            </li>
+          </ul>
         </div>
       </div>
     </div>
