section our-blog

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -143,6 +143,56 @@
       </div>
     </div>
   </section>
+  <section class="our-blog">
+    <div class="container">
+      <div class="our-blog__inner">
+        <div class="our-blog__content">
+          <h2 class="our-blog__title">
+            OUR BLOG
+          </h2>
+          <p class="our-blog__text">
+            Luxurious Bridal Haven's blog is about inspiration and up-to-the-minute information from the wedding fashion
+            world. Here
+            you can find collection reviews, trunk shows announcements, guides, and lifehacks for wedding preparation.
+          </p>
+          <a class="our-blog__link" href="#">
+            Show more
+          </a>
+        </div>
+        <picture>
+          <source srcset="images/our-blog-img-1.avif" type="image/avif">
+          <source srcset="images/our-blog-img-1.Webp" type="image/Webp">
+          <img class="our-blog__img" src="images/our-blog-img-1.jpg" alt="Alt text">
+        </picture>
+        <div class="our-blog__box our-blog__box-right">
+          <picture>
+            <source srcset="images/our-blog-img-2.avif" type="image/avif">
+            <source srcset="images/our-blog-img-2.Webp" type="image/Webp">
+            <img class="our-blog__box-img" src="images/our-blog-img-2.jpg" alt="Alt text">
+          </picture>
+          <a class="our-blog__box-link" href="#">
+            When to start shopping for your wedding dress
+          </a>
+          <p class="our-blog__box-date">
+            Tuesday, 16 April 2024
+          </p>
+        </div>
+        <div class="our-blog__box our-blog__box-bottom">
+          <picture>
+            <source srcset="images/our-blog-img-3.avif" type="image/avif">
+            <source srcset="images/our-blog-img-3.Webp" type="image/Webp">
+            <img class="our-blog__box-img" src="images/our-blog-img-3.jpg" alt="Alt text">
+          </picture>
+          <a class="our-blog__box-link" href="#">
+            Top 6 wedding dress trends brides should know
+          </a>
+          <p class="our-blog__box-date">
+            Monday, 20 May 2024
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
 </main>
 
 <!--= include footer.html -->
