Оновлення: нові сторінки та картинки, зміни у стилях і скриптах

--- a/app/pages/reviews.html
+++ b/app/pages/reviews.html
@@ -22,163 +22,163 @@
           </a>
           <a class="reviews-slider__item swiper-slide" href="#">
             <picture>
-              <source srcset="images/slide.avif" type="image/avif">
-              <source srcset="images/slide.Webp" type="image/Webp">
-              <img src="images/slide.jpg" alt="Alt text">
+              <source srcset="images/slide-1.avif" type="image/avif">
+              <source srcset="images/slide-1.Webp" type="image/Webp">
+              <img src="images/slide-1.jpg" alt="Alt text">
             </picture>
           </a>
           <a class="reviews-slider__item swiper-slide" href="#">
             <picture>
-              <source srcset="images/slide.avif" type="image/avif">
-              <source srcset="images/slide.Webp" type="image/Webp">
-              <img src="images/slide.jpg" alt="Alt text">
+              <source srcset="images/slide-2.avif" type="image/avif">
+              <source srcset="images/slide-2.Webp" type="image/Webp">
+              <img src="images/slide-2.jpg" alt="Alt text">
             </picture>
           </a>
           <a class="reviews-slider__item swiper-slide" href="#">
             <picture>
-              <source srcset="images/slide.avif" type="image/avif">
-              <source srcset="images/slide.Webp" type="image/Webp">
-              <img src="images/slide.jpg" alt="Alt text">
+              <source srcset="images/slide-3.avif" type="image/avif">
+              <source srcset="images/slide-3.Webp" type="image/Webp">
+              <img src="images/slide-3.jpg" alt="Alt text">
             </picture>
           </a>
           <a class="reviews-slider__item swiper-slide" href="#">
             <picture>
-              <source srcset="images/slide.avif" type="image/avif">
-              <source srcset="images/slide.Webp" type="image/Webp">
-              <img src="images/slide.jpg" alt="Alt text">
+              <source srcset="images/slide-4.avif" type="image/avif">
+              <source srcset="images/slide-4.Webp" type="image/Webp">
+              <img src="images/slide-4.jpg" alt="Alt text">
             </picture>
           </a>
           <a class="reviews-slider__item swiper-slide" href="#">
             <picture>
-              <source srcset="images/slide.avif" type="image/avif">
-              <source srcset="images/slide.Webp" type="image/Webp">
-              <img src="images/slide.jpg" alt="Alt text">
+              <source srcset="images/slide-5.avif" type="image/avif">
+              <source srcset="images/slide-5.Webp" type="image/Webp">
+              <img src="images/slide-5.jpg" alt="Alt text">
             </picture>
           </a>
           <a class="reviews-slider__item swiper-slide" href="#">
             <picture>
-              <source srcset="images/slide.avif" type="image/avif">
-              <source srcset="images/slide.Webp" type="image/Webp">
-              <img src="images/slide.jpg" alt="Alt text">
+              <source srcset="images/slide-6.avif" type="image/avif">
+              <source srcset="images/slide-6.Webp" type="image/Webp">
+              <img src="images/slide-6.jpg" alt="Alt text">
             </picture>
           </a>
           <a class="reviews-slider__item swiper-slide" href="#">
             <picture>
-              <source srcset="images/slide.avif" type="image/avif">
-              <source srcset="images/slide.Webp" type="image/Webp">
-              <img src="images/slide.jpg" alt="Alt text">
+              <source srcset="images/slide-7.avif" type="image/avif">
+              <source srcset="images/slide-7.Webp" type="image/Webp">
+              <img src="images/slide-7.jpg" alt="Alt text">
             </picture>
           </a>
           <a class="reviews-slider__item swiper-slide" href="#">
             <picture>
-              <source srcset="images/slide.avif" type="image/avif">
-              <source srcset="images/slide.Webp" type="image/Webp">
-              <img src="images/slide.jpg" alt="Alt text">
+              <source srcset="images/slide-8.avif" type="image/avif">
+              <source srcset="images/slide-8.Webp" type="image/Webp">
+              <img src="images/slide-8.jpg" alt="Alt text">
             </picture>
           </a>
           <a class="reviews-slider__item swiper-slide" href="#">
             <picture>
-              <source srcset="images/slide.avif" type="image/avif">
-              <source srcset="images/slide.Webp" type="image/Webp">
-              <img src="images/slide.jpg" alt="Alt text">
+              <source srcset="images/slide-9.avif" type="image/avif">
+              <source srcset="images/slide-9.Webp" type="image/Webp">
+              <img src="images/slide-9.jpg" alt="Alt text">
             </picture>
           </a>
           <a class="reviews-slider__item swiper-slide" href="#">
             <picture>
-              <source srcset="images/slide.avif" type="image/avif">
-              <source srcset="images/slide.Webp" type="image/Webp">
-              <img src="images/slide.jpg" alt="Alt text">
+              <source srcset="images/slide-10.avif" type="image/avif">
+              <source srcset="images/slide-10.Webp" type="image/Webp">
+              <img src="images/slide-10.jpg" alt="Alt text">
             </picture>
           </a>
           <a class="reviews-slider__item swiper-slide" href="#">
             <picture>
-              <source srcset="images/slide.avif" type="image/avif">
-              <source srcset="images/slide.Webp" type="image/Webp">
-              <img src="images/slide.jpg" alt="Alt text">
+              <source srcset="images/slide-9.avif" type="image/avif">
+              <source srcset="images/slide-9.Webp" type="image/Webp">
+              <img src="images/slide-9.jpg" alt="Alt text">
             </picture>
           </a>
           <a class="reviews-slider__item swiper-slide" href="#">
             <picture>
-              <source srcset="images/slide.avif" type="image/avif">
-              <source srcset="images/slide.Webp" type="image/Webp">
-              <img src="images/slide.jpg" alt="Alt text">
+              <source srcset="images/slide-8.avif" type="image/avif">
+              <source srcset="images/slide-8.Webp" type="image/Webp">
+              <img src="images/slide-8.jpg" alt="Alt text">
             </picture>
           </a>
           <a class="reviews-slider__item swiper-slide" href="#">
             <picture>
-              <source srcset="images/slide.avif" type="image/avif">
-              <source srcset="images/slide.Webp" type="image/Webp">
-              <img src="images/slide.jpg" alt="Alt text">
+              <source srcset="images/slide-7.avif" type="image/avif">
+              <source srcset="images/slide-7.Webp" type="image/Webp">
+              <img src="images/slide-7.jpg" alt="Alt text">
             </picture>
           </a>
           <a class="reviews-slider__item swiper-slide" href="#">
             <picture>
-              <source srcset="images/slide.avif" type="image/avif">
-              <source srcset="images/slide.Webp" type="image/Webp">
-              <img src="images/slide.jpg" alt="Alt text">
+              <source srcset="images/slide-6.avif" type="image/avif">
+              <source srcset="images/slide-6.Webp" type="image/Webp">
+              <img src="images/slide-6.jpg" alt="Alt text">
             </picture>
           </a>
           <a class="reviews-slider__item swiper-slide" href="#">
             <picture>
-              <source srcset="images/slide.avif" type="image/avif">
-              <source srcset="images/slide.Webp" type="image/Webp">
-              <img src="images/slide.jpg" alt="Alt text">
+              <source srcset="images/slide-5.avif" type="image/avif">
+              <source srcset="images/slide-5.Webp" type="image/Webp">
+              <img src="images/slide-5.jpg" alt="Alt text">
             </picture>
           </a>
           <a class="reviews-slider__item swiper-slide" href="#">
             <picture>
-              <source srcset="images/slide.avif" type="image/avif">
-              <source srcset="images/slide.Webp" type="image/Webp">
-              <img src="images/slide.jpg" alt="Alt text">
+              <source srcset="images/slide-4.avif" type="image/avif">
+              <source srcset="images/slide-4.Webp" type="image/Webp">
+              <img src="images/slide-4.jpg" alt="Alt text">
             </picture>
           </a>
           <a class="reviews-slider__item swiper-slide" href="#">
             <picture>
-              <source srcset="images/slide.avif" type="image/avif">
-              <source srcset="images/slide.Webp" type="image/Webp">
-              <img src="images/slide.jpg" alt="Alt text">
+              <source srcset="images/slide-3.avif" type="image/avif">
+              <source srcset="images/slide-3.Webp" type="image/Webp">
+              <img src="images/slide-3.jpg" alt="Alt text">
             </picture>
           </a>
           <a class="reviews-slider__item swiper-slide" href="#">
             <picture>
-              <source srcset="images/slide.avif" type="image/avif">
-              <source srcset="images/slide.Webp" type="image/Webp">
-              <img src="images/slide.jpg" alt="Alt text">
+              <source srcset="images/slide-2.avif" type="image/avif">
+              <source srcset="images/slide-2.Webp" type="image/Webp">
+              <img src="images/slide-2.jpg" alt="Alt text">
             </picture>
           </a>
           <a class="reviews-slider__item swiper-slide" href="#">
             <picture>
-              <source srcset="images/slide.avif" type="image/avif">
-              <source srcset="images/slide.Webp" type="image/Webp">
-              <img src="images/slide.jpg" alt="Alt text">
+              <source srcset="images/slide-1.avif" type="image/avif">
+              <source srcset="images/slide-1.Webp" type="image/Webp">
+              <img src="images/slide-1.jpg" alt="Alt text">
             </picture>
           </a>
           <a class="reviews-slider__item swiper-slide" href="#">
             <picture>
-              <source srcset="images/slide.avif" type="image/avif">
-              <source srcset="images/slide.Webp" type="image/Webp">
-              <img src="images/slide.jpg" alt="Alt text">
+              <source srcset="images/slide-2.avif" type="image/avif">
+              <source srcset="images/slide-2.Webp" type="image/Webp">
+              <img src="images/slide-2.jpg" alt="Alt text">
             </picture>
           </a>
           <a class="reviews-slider__item swiper-slide" href="#">
             <picture>
-              <source srcset="images/slide.avif" type="image/avif">
-              <source srcset="images/slide.Webp" type="image/Webp">
-              <img src="images/slide.jpg" alt="Alt text">
+              <source srcset="images/slide-3.avif" type="image/avif">
+              <source srcset="images/slide-3.Webp" type="image/Webp">
+              <img src="images/slide-3.jpg" alt="Alt text">
             </picture>
           </a>
           <a class="reviews-slider__item swiper-slide" href="#">
             <picture>
-              <source srcset="images/slide.avif" type="image/avif">
-              <source srcset="images/slide.Webp" type="image/Webp">
-              <img src="images/slide.jpg" alt="Alt text">
+              <source srcset="images/slide-4.avif" type="image/avif">
+              <source srcset="images/slide-4.Webp" type="image/Webp">
+              <img src="images/slide-4.jpg" alt="Alt text">
             </picture>
           </a>
           <a class="reviews-slider__item swiper-slide" href="#">
             <picture>
-              <source srcset="images/slide.avif" type="image/avif">
-              <source srcset="images/slide.Webp" type="image/Webp">
-              <img src="images/slide.jpg" alt="Alt text">
+              <source srcset="images/slide-5.avif" type="image/avif">
+              <source srcset="images/slide-5.Webp" type="image/Webp">
+              <img src="images/slide-5.jpg" alt="Alt text">
             </picture>
           </a>
         </div>
