--- a/app/pages/blog.html
+++ b/app/pages/blog.html
@@ -61,14 +61,14 @@
         </search>
         <ul class="blog__nav-btns">
           <li class="blog__nav-item">
-            <button class="blog__nav-btn">
+            <button class="blog__nav-btn view-mod__btn--grid">
               <svg width="40" height="40">
                 <use xlink:href="images/sprite.svg#blog-grid"></use>
               </svg>
             </button>
           </li>
           <li class="blog__nav-item">
-            <button class="blog__nav-btn">
+            <button class="blog__nav-btn view-mod__btn--line">
               <svg width="40" height="40">
                 <use xlink:href="images/sprite.svg#blog-line"></use>
               </svg>
@@ -76,7 +76,7 @@
           </li>
         </ul>
       </div>
-      <div class="blog__list">
+      <div class="blog__list view-mod__container view-mod__container--grid">
         <article class="blog__list-item">
           <a class="blog__list-imglist" href="#">
             <picture>
