--- a/app/pages/catalog.html
+++ b/app/pages/catalog.html
@@ -1,6 +1,380 @@
 <!--= include promo.html -->
 <!--= include header.html -->
 <main class="main">
-
+  <!--= include breadcrumbs.html -->
+  <section class="catalog">
+    <div class="container">
+      <div class="catalog__top">
+        <div class="catalog__view-mod">
+          View as
+          <ul class="view-mod">
+            <li class="view-mod__item">
+              <button class="view-mod__btn view-mod__btn--grid">
+                <svg width="20" height="20">
+                  <use xlink:href="images/sprite.svg#catalog-grid"></use>
+                </svg>
+              </button>
+            </li>
+            <li class="view-mod__item">
+              <button class="view-mod__btn view-mod__btn--line">
+                <svg width="20" height="20">
+                  <use xlink:href="images/sprite.svg#catalog-line"></use>
+                </svg>
+              </button>
+            </li>
+          </ul>
+        </div>
+        <h2 class="catalog__title">
+          WEDDING DRESSES
+        </h2>
+        <div class="catalog__sort">
+          <form class="catalog__sort-form">
+            <div class="catalog__sort-wrapper">
+              <select class="catalog__sort-select">
+                <option selected>Sort by popularity</option>
+                <option value="Price: Low to High">Price: Low to High</option>
+                <option value="Price: High to Low">Price: High to Low</option>
+                <option value="A-Z">A-Z</option>
+              </select>
+            </div>
+          </form>
+        </div>
+      </div>
+      <div class="catalog__content">
+        <aside class="catalog__filter">
+          <form class="catalog__filter-form">
+            <div class="catalog__filterbox">
+              <p class="catalog__filterbox-title">PRICE</p>
+              <div class="catalog__filterbox-itemrange">
+                <div class="range">
+                  <div class="range__inputs">
+                    <label class="range__label">
+                      <input class="range__min" type="number" min="300" max="3000" step="100">
+                    </label>
+                    -
+                    <label class="range__label">
+                      <input class="range__max" type="number" min="300" max="3000" step="100">
+                    </label>
+                  </div>
+                  <div class="range__slider"></div>
+                  <div class="range__list">
+                    <li>300</li>
+                    <li>1,000</li>
+                    <li>1,500</li>
+                    <li>2,000</li>
+                    <li>2,500</li>
+                    <li>3,000</li>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="catalog__filterbox">
+              <p class="catalog__filterbox-title">SIZE</p>
+              <div class="catalog__filterbox-items">
+                <label class="checkbox-label">
+                  <input class="checkbox" type="checkbox">
+                  <span class="check-style"></span>
+                  XS
+                </label>
+                <label class="checkbox-label">
+                  <input class="checkbox" type="checkbox">
+                  <span class="check-style"></span>
+                  S
+                </label>
+                <label class="checkbox-label">
+                  <input class="checkbox" type="checkbox">
+                  <span class="check-style"></span>
+                  M
+                </label>
+                <label class="checkbox-label">
+                  <input class="checkbox" type="checkbox">
+                  <span class="check-style"></span>
+                  L
+                </label>
+                <label class="checkbox-label">
+                  <input class="checkbox" type="checkbox">
+                  <span class="check-style"></span>
+                  XL
+                </label>
+                <label class="checkbox-label">
+                  <input class="checkbox" type="checkbox">
+                  <span class="check-style"></span>
+                  XXL
+                </label>
+              </div>
+            </div>
+            <div class="catalog__filterbox">
+              <p class="catalog__filterbox-title">COLOR</p>
+              <div class="catalog__filterbox-items">
+                <label class="radio-label">
+                  <input class="radio-box" type="radio">
+                  <span class="radio-style"></span>
+                  WHITE
+                </label>
+                <label class="radio-label">
+                  <input class="radio-box" type="radio">
+                  <span class="radio-style"></span>
+                  IVORY
+                </label>
+              </div>
+            </div>
+            <div class="catalog__filterbox">
+              <p class="catalog__filterbox-title">MATERIAL</p>
+              <div class="catalog__filterbox-items">
+                <label class="checkbox-label">
+                  <input class="checkbox" type="checkbox">
+                  <span class="check-style"></span>
+                  LACE
+                </label>
+                <label class="checkbox-label">
+                  <input class="checkbox" type="checkbox">
+                  <span class="check-style"></span>
+                  SILK
+                </label>
+                <label class="checkbox-label">
+                  <input class="checkbox" type="checkbox">
+                  <span class="check-style"></span>
+                  CREPE
+                </label>
+                <label class="checkbox-label">
+                  <input class="checkbox" type="checkbox">
+                  <span class="check-style"></span>
+                  SATIN
+                </label>
+                <label class="checkbox-label">
+                  <input class="checkbox" type="checkbox">
+                  <span class="check-style"></span>
+                  EMBROIDERY
+                </label>
+                <label class="checkbox-label">
+                  <input class="checkbox" type="checkbox">
+                  <span class="check-style"></span>
+                  ECO
+                </label>
+              </div>
+            </div>
+            <div class="catalog__filterbox">
+              <p class="catalog__filterbox-title">STYLE</p>
+              <div class="catalog__filterbox-itemline">
+                <label class="checkbox-label">
+                  <input class="checkbox" type="checkbox">
+                  <span class="check-style"></span>
+                  ALL
+                </label>
+                <label class="checkbox-label">
+                  <input class="checkbox" type="checkbox">
+                  <span class="check-style"></span>
+                  BOHO
+                </label>
+                <label class="checkbox-label">
+                  <input class="checkbox" type="checkbox">
+                  <span class="check-style"></span>
+                  ROMANTIC
+                </label>
+                <label class="checkbox-label">
+                  <input class="checkbox" type="checkbox">
+                  <span class="check-style"></span>
+                  ELEGANT
+                </label>
+                <label class="checkbox-label">
+                  <input class="checkbox" type="checkbox">
+                  <span class="check-style"></span>
+                  VINTAGE
+                </label>
+                <label class="checkbox-label">
+                  <input class="checkbox" type="checkbox">
+                  <span class="check-style"></span>
+                  SIMPLE
+                </label>
+                <label class="checkbox-label">
+                  <input class="checkbox" type="checkbox">
+                  <span class="check-style"></span>
+                  MODERN
+                </label>
+                <label class="checkbox-label">
+                  <input class="checkbox" type="checkbox">
+                  <span class="check-style"></span>
+                  FORMAL
+                </label>
+                <label class="checkbox-label">
+                  <input class="checkbox" type="checkbox">
+                  <span class="check-style"></span>
+                  PRINCESS
+                </label>
+                <label class="checkbox-label">
+                  <input class="checkbox" type="checkbox">
+                  <span class="check-style"></span>
+                  GLAMOROUS
+                </label>
+                <label class="checkbox-label">
+                  <input class="checkbox" type="checkbox">
+                  <span class="check-style"></span>
+                  MODEST
+                </label>
+                <label class="checkbox-label">
+                  <input class="checkbox" type="checkbox">
+                  <span class="check-style"></span>
+                  CASUAL
+                </label>
+                <label class="checkbox-label">
+                  <input class="checkbox" type="checkbox">
+                  <span class="check-style"></span>
+                  BEACH
+                </label>
+                <label class="checkbox-label">
+                  <input class="checkbox" type="checkbox">
+                  <span class="check-style"></span>
+                  ELOPEMENT
+                </label>
+              </div>
+            </div>
+            <button class="catalog__filterbox-clean">
+              clear all
+            </button>
+          </form>
+        </aside>
+        <div class="catalog__content-box">
+          <div class="catalog__content-items view-mod__container view-mod__container--grid">
+            <div class="catalog__content-item">
+              <picture>
+                <source srcset="images/catalog-1.avif" type="image/avif">
+                <source srcset="images/catalog-1.Webp" type="image/Webp">
+                <img src="images/catalog-1.jpg" alt="Alt text">
+              </picture>
+              <div class="catalog__content-itembox">
+                <p class="catalog__content-name">
+                  Blanca
+                </p>
+                <p class="catalog__content-price">
+                  € 1,850.00
+                </p>
+              </div>
+            </div>
+            <div class="catalog__content-item">
+              <picture>
+                <source srcset="images/catalog-2.avif" type="image/avif">
+                <source srcset="images/catalog-2.Webp" type="image/Webp">
+                <img src="images/catalog-2.jpg" alt="Alt text">
+              </picture>
+              <div class="catalog__content-itembox">
+                <p class="catalog__content-name">
+                  Blanca
+                </p>
+                <p class="catalog__content-price">
+                  € 1,850.00
+                </p>
+              </div>
+            </div>
+            <div class="catalog__content-item">
+              <picture>
+                <source srcset="images/catalog-3.avif" type="image/avif">
+                <source srcset="images/catalog-3.Webp" type="image/Webp">
+                <img src="images/catalog-3.jpg" alt="Alt text">
+              </picture>
+              <div class="catalog__content-itembox">
+                <p class="catalog__content-name">
+                  Blanca
+                </p>
+                <p class="catalog__content-price">
+                  € 1,850.00
+                </p>
+              </div>
+            </div>
+            <div class="catalog__content-item">
+              <picture>
+                <source srcset="images/catalog-4.avif" type="image/avif">
+                <source srcset="images/catalog-4.Webp" type="image/Webp">
+                <img src="images/catalog-4.jpg" alt="Alt text">
+              </picture>
+              <div class="catalog__content-itembox">
+                <p class="catalog__content-name">
+                  Blanca
+                </p>
+                <p class="catalog__content-price">
+                  € 1,850.00
+                </p>
+              </div>
+            </div>
+            <div class="catalog__content-item">
+              <picture>
+                <source srcset="images/catalog-5.avif" type="image/avif">
+                <source srcset="images/catalog-5.Webp" type="image/Webp">
+                <img src="images/catalog-5.jpg" alt="Alt text">
+              </picture>
+              <div class="catalog__content-itembox">
+                <p class="catalog__content-name">
+                  Blanca
+                </p>
+                <p class="catalog__content-price">
+                  € 1,850.00
+                </p>
+              </div>
+            </div>
+            <div class="catalog__content-item">
+              <picture>
+                <source srcset="images/catalog-6.avif" type="image/avif">
+                <source srcset="images/catalog-6.Webp" type="image/Webp">
+                <img src="images/catalog-6.jpg" alt="Alt text">
+              </picture>
+              <div class="catalog__content-itembox">
+                <p class="catalog__content-name">
+                  Blanca
+                </p>
+                <p class="catalog__content-price">
+                  € 1,850.00
+                </p>
+              </div>
+            </div>
+            <div class="catalog__content-item">
+              <picture>
+                <source srcset="images/catalog-7.avif" type="image/avif">
+                <source srcset="images/catalog-7.Webp" type="image/Webp">
+                <img src="images/catalog-7.jpg" alt="Alt text">
+              </picture>
+              <div class="catalog__content-itembox">
+                <p class="catalog__content-name">
+                  Blanca
+                </p>
+                <p class="catalog__content-price">
+                  € 1,850.00
+                </p>
+              </div>
+            </div>
+            <div class="catalog__content-item">
+              <picture>
+                <source srcset="images/catalog-8.avif" type="image/avif">
+                <source srcset="images/catalog-8.Webp" type="image/Webp">
+                <img src="images/catalog-8.jpg" alt="Alt text">
+              </picture>
+              <div class="catalog__content-itembox">
+                <p class="catalog__content-name">
+                  Blanca
+                </p>
+                <p class="catalog__content-price">
+                  € 1,850.00
+                </p>
+              </div>
+            </div>
+            <div class="catalog__content-item">
+              <picture>
+                <source srcset="images/catalog-9.avif" type="image/avif">
+                <source srcset="images/catalog-9.Webp" type="image/Webp">
+                <img src="images/catalog-9.jpg" alt="Alt text">
+              </picture>
+              <div class="catalog__content-itembox">
+                <p class="catalog__content-name">
+                  Blanca
+                </p>
+                <p class="catalog__content-price">
+                  € 1,850.00
+                </p>
+              </div>
+            </div>
+          </div>
+          <!--= include pagination.html -->
+        </div>
+      </div>
+    </div>
+  </section>
 </main>
 <!--= include footer.html -->
